# EEG_Characterizer_HFO

./: .gitignore  README.md  UNIT_TESTS_SUMMARY.md  activate.sh  main.py  pyproject.toml  run_display_files_to_detect.py  run_eeg_characterization.py  run_eeg_characterization_edit.py  run_eeg_hfo_characterize_detect.py  test_scale_array.py
docs/: Data_Transfer.md  Engineered_Features_Description.md  Windows_Instructions.md  run_eeg_hfo_characterize_detect_usage.md
hfo_spectral_detector/dsp/: cwt.py  detect_emi.py  noise_index.py  signal_processing.py
hfo_spectral_detector/eeg_io/: eeg_io.py  laydat_writer.py
hfo_spectral_detector/elpi/: contour_objects_to_elpi_annotations.py  elpi_interface.py  join_elpi_files.py
hfo_spectral_detector/file_io/: fileparts.py
hfo_spectral_detector/prediction/: XGB_2025-09-08_23-42_Kappa90.json  XGB_OptimalThreshold_2025-09-08_23-42_90.json  XGB_Single_Class_2025-04-24_22-09_Kappa86.json  elpi_events_characterizer.py  predict_characterize_hfo.py
hfo_spectral_detector/spectral_analyzer/: HFO_Spectral_Analyzer.py  README_MODULAR.md  __init__.py  characterize_events.py  config.py  feature_extraction.py  get_bp_features.py  get_other_spectral_features.py  hfo_validation.py  mean_shift_clustering.py  visualization.py
hfo_spectral_detector/studies_info/: studies_info.py  studies_info_clipped.py
hfo_spectral_detector/utils/: __init__.py  io_tools.py  rename_edf_extensions.sh
hpc_jobs/: bipolar_scalp_hfo_detection.slurm  bp_ieeg_hfo_detection.slurm  corrected_physiotest_job.slurm  data_groups_hfo_detection.slurm  eeg_characterization_job.slurm  eeg_characterization_job_test.slurm  example_commands.md  frankfurt_clae_hfo_detection_job.slurm  hfo_detection_multifolder_job.slurm  hfo_detection_unifolder_job.slurm
shell_scripts/: Rename-EdfExtensions.ps1  rename_edf_extensions.sh  run_hfo_detection.ps1  run_hfo_detection.sh
tests/: README.md  __init__.py  run_tests.py  test_argument_parsing.py  test_eeg_io.py  test_eeg_processing.py  test_eeg_validation.py  test_integration.py  test_laydat_writer.py  test_main_function.py  test_run_eeg_hfo_characterize_detect.py
~/Slurm_Logs/: hfo_detection_multifolder_job_%u_%j.err
