[tool.poetry]
name = "hfo-spectral-detector"
version = "0.1.0"
description = "Detect HFO by applying computer vision techniques for the analysis of teh wavelet based spectrogram"
authors = ["mossdet <mossdet.detector@gmail.com>"]
readme = "README.md"
packages = [{include = "hfo_spectral_detector"}]

[tool.poetry.dependencies]
python = "3.11.8"
opencv-contrib-python = "4.10.0.84"
matplotlib = "3.9.0"
scikit-learn = "1.5.1"
mne = "1.7.1"
pandas = "2.2.2"
psutil = "6.0.0"
silx = "2.1.0"
jupyterlab = "4.2.4"
seaborn = "0.12.2"
optuna = "3.6.1"
xgboost = "2.1.1"
edfio = "0.4.3"
pybv = "0.7.5"
pyarrow = "17.0.0"
pyqtgraph = "0.13.7"

tensorflow = {version = "2.17.0" }
tensorflow-intel = { version = "2.17.0" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },]

#tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
scikit-learn-intelex = "2024.7.0"
tabulate = "0.9.0"
imbalanced-learn = "0.12.3"
mlflow = "2.16.2"
statsmodels = "^0.14.4"
pandoc = "^2.4"
tabpfn = "^2.0.6"
tabpfn-extensions = "^0.0.4"
shap = "^0.47.1"

[tool.poetry.group.test.dependencies]
pytest = "8.3.2"
pytest-cov = "5.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
