[project]
name = "venv-hfo-characterizer"
version = "0.1.0"
description = "Scripts to read EEG and compute features that allow detecting HFO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edfio==0.4.9",
    "matplotlib==3.10.5",
    "mne==1.10.1",
    "numpy==2.3.2",
    "opencv-contrib-python==4.11.0.86",
    "pandas==2.3.2",
    "pyarrow==21.0.0",
    "scikit-learn==1.7.1",
    "xgboost==2.1.1",
]
